syntax = "proto3";

package raftpb;

message Entry {
	uint64 term = 1;
	uint64 index = 2;
	bytes data = 3;
}

message AppendEntriesRequest {
	uint64 term = 1;
	string leader_id = 2;
	uint64 prev_log_index = 3;
	uint64 prev_log_term = 4;
	repeated Entry entries = 5;
	uint64 leader_commit = 6;
}

message AppendEntriesResponse {
	uint64 term = 1;
	bool success = 2;
}

message RequestVoteRequest {
	uint64 term = 1;
	uint64 candidate_id = 2;
	uint64 last_log_index = 3;
	uint64 last_log_term = 4;
}

message RequestVoteResponse {
	uint64 term = 1;
	bool vote_granted = 2;
}

service Raft {
	rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
	rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse ) {}
}
